# cmake-gl-game

./: CMakeLists.txt
src/: Main.cpp
